--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>day la the tieu de</h1>
+    <!-- <h1>day la the tieu de</h1> -->
     <p>day la do thanh vien 1 them</p>
 </body>
 </html>
