--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/styles.css">
-    <link rel="stylesheet" href="./assets/reset.css">
+    <!-- <link rel="stylesheet" href="./assets/reset.css"> -->
 </head>
 <body>
     <h1>day la the tieu de</h1>
